@@ -34,6 +34,7 @@ signals:
     void stateChanged (State state);
     void progress (const Progress &progress);
     void ipAssigned (const QString &ip);
+    void fallback (bool isFallback);
     void need (const QString &what);
     void authRequired (Auth::Id id);
     void authSupplied (const Auth &auth);
